--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <div class="canvas-wrapper clearfix center-block">
-            <canvas id="canvas" class="center-block"></canvas>
+          <h2 style="text-align:center; color:white;">Mulitplayer Chess</h2>
+          <div class="table-wrapper clearfix center-block">
+            <table></table>
           </div>
         </div>
       </div>
     </div>
     <script src="js/jquery.js" charset="utf-8"></script>
     <script src="js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="js/custom.js" charset="utf-8"></script>
     <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
